Development Portal (2020-04-30 shi)
==============================
Update COVID-19 search text info to include tag
Fix capital-spend percentage
Add transaction description field for COVID-19 search


Development Portal (2020-04-26 shi)
==============================
Fix activity table margin


Development Portal (2020-04-25 shi)
==============================
Update font-size for currency in org files
Add fold for collapse of extra information in transaction tables
Adjust layout for transaction @ref


Development Portal (2020-04-22 shi)
==============================
Display vocab-uri for sectors 99 and 98


Development Portal (2020-04-21 shi)
==============================
Update length css
Move all charts to before budget
Display all charts as financial overview


Development Portal (2020-04-20 shi)
==============================
Update theme settings
Move search2 to front page
Update css
Update conditions
Fix new SAVi clashes
Update print-friendly new SAVi
Update transaction table fonts
Display narrative for non-dac sector in transaction tables
Display reference in transaction tables


Development Portal (2020-04-18 shi)
==============================
Update glossary
Hide extra filter options for now
Hide other trending buttons for now
Reposition transaction type 11 above 1
Display methodology for trending button in resulting pages (temp)


Development Portal (2020-04-17 shi)
==============================
Update more filters css
Update to text_search for trending


Development Portal (2020-04-16 shi)
==============================
Update css
Update covid-19 keyword
Update to 0% when percentage missing, js 0 is false


Development Portal (2020-04-15 shi)
==============================
Check if sector code has narrative if non-dac
Display percentage complete for activity dates on hover
Add empty description for policy marker significance
Update css
Display location @srsName as a link when found
Update participating-org column layout