@@ -3,6 +3,9 @@ Development Portal (2020-04-30 shi)
 Update COVID-19 search text info to include tag
 Fix capital-spend percentage
 Add transaction description field for COVID-19 search
+Display multiple narratives in title, description,
+participating-org, humanitarian-scope, tag-99,
+condition, policy-marker-99
 
 
 Development Portal (2020-04-26 shi)
